2007-08-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-settings-keyboard-xkb.c
	(gnome_settings_keyboard_xkb_analyze_sysconfig): use
	gnome_settings_delayed_show_dialog() to display the error message,
	so that it is shown when a window manager is running, thus being
	centered and with a proper frame.

2007-08-18  Jens Granseuer  <jensgr@gmx.net>

	* actions/acme-volume-gstreamer.c: (update_state): don't check the
	internal volume since this makes it impossible to unmute a low volume
	(that translates to an internal GStreamer volume of 0)

	* gnome-settings-multimedia-keys.c: (do_sound_action): if we're
	muted and silent, don't just unmute on VOL+ but also raise the
	volume

2007-08-17  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-daemon.c: (initialize_modules), (start_modules),
	(stop_modules), (finalize), (gnome_settings_daemon_init),
	(gnome_settings_daemon_new): use a list instead of a hash table to
	store the settings modules (closes bug #449118)

2007-07-12  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-xsettings.c:
	(gnome_settings_module_xsettings_initialize): don't forget the Xft
	callback (fixes bug #455992)

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Grzegorz Dymarek <gregd@interia.pl>

	* gnome-settings-multimedia-keys.c: (do_sound_action): don't
	unmute when lowering the volume and switch to muted when the
	volume reaches 0 (closes bug #337896)

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-background.c:
	(gnome_settings_module_background_start): if we don't take over
	the background because nautilus is running, don't treat that as
	an error

2007-07-01  Jens Granseuer  <jensgr@gmx.net>

	* gnome-settings-accessibility-keyboard.c:
	(gnome_settings_module_accessibility_keyboard_get_type):
	* gnome-settings-background.c:
	(gnome_settings_module_background_get_type):
	* gnome-settings-clipboard.c:
	(gnome_settings_module_clipboard_get_type):
	* gnome-settings-default-editor.c: