@@ -1,3 +1,9 @@
+2007-08-22  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: initializing current_*config early,
+	so callback (apply_settings) would not crash,
+	http://bugzilla.gnome.org/show_bug.cgi?id=469192
+
 2007-08-21  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gnome-settings-keyboard-xkb.c
